se unen los proyectos I y II de back end

--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -1,15 +1,11 @@
 <div>
+    {{#if user}}
     <h1>Tu perfil (sin datos sensibles)</h1>
     <p>{{user.name}}</p>
     <p>{{user.email}}</p>
     <p>{{user.age}}</p>
-
-    <br>
-
-    {{#if user.isAdmin}}
-    <p> Admin-dashBoard: <a href="/users/dashboard-admin">Ingresa</a></p>
+    {{else}}
+    <h1>Inicia sesión para ver tu perfil</h1>
+    <a href="/users/login">Ingresar</a>
     {{/if}}
-
-    <p> <a href="/api/sessions/logout">Logout</a></p>
 </div>
-<script src="/js/users.js"></script>
