--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -3,11 +3,11 @@
     <form id="loginForm">
         <label>Email</label>
         <input name="email">
-        <br/>
+        <br />
         <label>Contraseña</label>
-        <input name="password">
+        <input type="password" name="password">
         <input type="submit">
     </form>
-    <p>¿No estás registrado? <a href="/users/register">Regístrate aquí</a></p>
 </div>
+
 <script src="/js/login.js"></script>
