--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -1,7 +1,6 @@
 <div>
     <h1>Registro</h1>
     <form id="registerForm">
-
         <label>Nombre</label>
         <input name="first_name">
         <br/>
@@ -15,10 +14,10 @@
         <input name="age">
         <br/>
         <label>Contraseña</label>
-        <input name="password">
-
+        <input type="password" name="password">
         <input type="submit">
     </form>
     <p>¿Ya tienes una cuenta? <a href="/users/login">Ingresa aquí</a></p>
 </div>
+
 <script src="/js/register.js"></script>
